# automated_capacity

./: .env.example  .gitignore  README.md  UI_DESIGN.md  pyproject.toml
agents/: engineer.py  harness.py  research.py  scientist.py  server_client.py
agents/tools/: __init__.py  bash.py  create_stream.py  edit.py  read.py  search.py  signal.py  timer.py  web_fetch.py
frontend-design/: tokens.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInput.tsx  ChatView.tsx  ExpandableSection.tsx  FormattedText.tsx  Sidebar.tsx
frontend/src/components/cards/: EngineeringCard.tsx  ExperimentCard.tsx  OrchestratorCard.tsx  ResearchCard.tsx  SimulationCard.tsx  StreamRenderer.tsx  UserCard.tsx
frontend/src/lib/: api.ts  formatDisplay.ts  mock-data.ts  store.ts  types.ts  useRunSocket.ts
infra/: aws.py  local.py
orchestrator/: loop.py  prompts.py  tools.py
server/: app.py  models.py  state.py  ws_manager.py
server/routes/: agents.py  runs.py  streams.py  ws.py
shared/: config.py  protocol.py
