[project]
name = "automated-research"
version = "0.1.0"
description = "Deployable automated research system with orchestrator, engineer, and scientist agents"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "anthropic>=0.45.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.1.0",
    "boto3>=1.35.0",
    "websockets>=12.0",
]
